gap fixed

--- a/src/components/components-home/home-instruments/home-instruments.styles.scss
+++ b/src/components/components-home/home-instruments/home-instruments.styles.scss
@@ -82,6 +82,7 @@
 //         margin: 0 auto;
 //     }
 // }
+
 @media (min-width: 1024px){
     .home-section-container{
         position: relative;
@@ -97,7 +98,7 @@
         // gap: 80px;
         width: 100%;
         //height: 870px;
-        border-top: 1px solid #E2E3E7;
+        // border-top: 1px solid #E2E3E7;
         //margin-top: 50px;
         margin-bottom: 50px;
     }
@@ -167,7 +168,7 @@
         // gap: 80px;
         width: 100%;
         //height: 870px;
-        border-top: 1px solid #E2E3E7;
+        // border-top: 1px solid #E2E3E7;
     }
     .home-instrument-container{
         display: flex;
